--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "yarn build && node dist/index.js"
+    "start": "yarn build && node dist/index.js",
+    "start:dev": "ts-node-dev 'src/index.ts"
   },
   "repository": "git@github.com:DiegoJunges/linkapi.git",
   "author": "Diego <diego.aviz@going2.com.br>",
@@ -20,6 +21,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.1",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2"
   }
 }
