--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "import/prefer-default-export": "off",
     "prettier/prettier": "error",
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": [
