--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start:dev": "ts-node-dev src/server.ts"
   },
   "repository": "git@github.com:DiegoJunges/linkapi.git",
-  "author": "Diego <diego.aviz@going2.com.br>",
+  "author": "Diego <diegojunges@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.2",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
@@ -26,7 +27,9 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   }
 }
