--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.12",
+    "@types/jsontoxml": "^1.0.1",
+    "@types/jstoxml": "^2.0.0",
     "@types/node": "^15.12.2",
+    "@types/xml2js": "^0.4.8",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "eslint": "^7.28.0",
@@ -30,6 +33,9 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsontoxml": "^1.0.1",
+    "jstoxml": "^2.0.6",
+    "xml2js": "^0.4.23"
   }
 }
